# pydata_uk_2023_gx

./: README.md  eda.ipynb  gx_intro.ipynb  pyproject.toml
data/: Housing.csv
gcp_hosting/app_engine/: README.md  app.yaml  main.py  requirements.txt
gcp_hosting/cloud_function/: main.py  requirements.txt
