[tool.poetry]
name = "london"
version = "0.1.0"
description = ""
authors = ["CarstenFrommhold <carsten.frommhold@datadrivers.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, <3.11"
great-expectations = "0.15.28"
jupyterlab = "^3.6.3"


[tool.poetry.group.dev.dependencies]
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
